# ituauv-uuv-descriptions

./: CMakeLists.txt  LICENSE  README.md  package.xml
meshes/navquest_dvl/: navquest_dvl.dae
meshes/thrusters/t100/: propeller.dae
urdf/: actuator_snippets.xacro  sensor_snippets.xacro  snippets.xacro
urdf/sensors/: camera_snippets.xacro  dvl_snippets.xacro  imu_snippets.xacro  magnetometer_snippets.xacro  pressure_snippets.xacro  sonar_snippets.xacro
